--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         [ "scripts/completion.hxml" ],
         [ "-main", "TestMain", "-cp", "src", "-cp", "test/haxelib/unit/src", "-lib", "munit", "-D", "openfl-unit-testing" ]
     ],
-    
+    "lime.projectFile": "test/haxelib/functional/project.xml",
     "editor.trimAutoWhitespace": false,
     "files.trimTrailingWhitespace": false,
     "editor.insertSpaces": false,
