--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        npm install -g
+        sudo npm install -g
 
     - name: Run unit tests
       run: |
