--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -67,28 +67,30 @@ jobs:
         submodules: true
 
     - name: Setup environment
-      run: |
-        sudo apt-get install -y --no-install-recommends wget
-        wget --no-check-certificate -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-        sudo h -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
-        sudo add-apt-repository ppa:haxe/releases -y
-        sudo apt-get update
-        sudo apt-get install google-chrome-stable haxe npm -y
-        mkdir $GITHUB_WORKSPACE/.haxelib
-        haxelib setup $GITHUB_WORKSPACE/.haxelib
-        haxelib dev openfl $GITHUB_WORKSPACE
+      uses: ianwalter/puppeteer@v2.0.0
+      with:
+        args: |
+          sudo add-apt-repository ppa:haxe/releases -y
+          sudo apt-get update
+          sudo apt-get install haxe -y
+          mkdir $GITHUB_WORKSPACE/.haxelib
+          haxelib setup $GITHUB_WORKSPACE/.haxelib
+          haxelib dev openfl $GITHUB_WORKSPACE
 
     - name: Install dependencies
-      run: |
-        sudo npm install
+      uses: ianwalter/puppeteer@v2.0.0
+      with:
+        args: sudo npm install
         
     - name: Build openfl.js
-      run: |
-        npm run build
+      uses: ianwalter/puppeteer@v2.0.0
+      with:
+        args: npm run build
 
     - name: Run unit tests
-      run: |
-        npm run test
+      uses: ianwalter/puppeteer@v2.0.0
+      with:
+        args: npm run test
     
     - name: Notify Discord (success)
       uses: appleboy/discord-action@master
