--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -87,7 +87,9 @@ jobs:
     - name: Run unit tests
       uses: ianwalter/puppeteer@v2.0.0
       with:
-        args: npm run run-test -s
+        args: |
+          npm install mocha-puppeteer
+          npx mocha-puppeteer ./test/*/bundle.js
     
     - name: Notify Discord (success)
       uses: appleboy/discord-action@master
