--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -76,7 +76,9 @@ jobs:
         haxelib dev openfl $GITHUB_WORKSPACE
 
     - name: Install dependencies
-      run: npm install
+      run: |
+        npm install
+        npm install -D mocha-puppeteer
         
     - name: Build openfl.js
       run: npm run build -s
@@ -87,9 +89,7 @@ jobs:
     - name: Run unit tests
       uses: ianwalter/puppeteer@v2.0.0
       with:
-        args: |
-          npm install mocha-puppeteer
-          npx mocha-puppeteer ./test/*/bundle.js
+        args: npx mocha-puppeteer ./test/*/bundle.js
     
     - name: Notify Discord (success)
       uses: appleboy/discord-action@master
