--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "url": "https://github.com/openfl/openfl.git"
   },
   "scripts": {
-    "build": "npm run build-lib && npm run build-lib-esm && npm run build-dist && npm run build-tools && npm run build-swc && npm run build-docs",
+    "build": "npm run build-lib && npm run build-lib-esm && npm run build-dist && npm run build-swc && npm run build-docs",
     "build-dist": "npm run build-dist:dev && npm run build-dist:prod",
     "build-dist:dev": "webpack --config webpack.dev.js",
     "build-dist:prod": "webpack --config webpack.prod.js",
@@ -48,7 +48,6 @@
     "build-lib-esm": "cd scripts && node generate-es2015 gen",
     "build-lib-esm-reexports-barrels": "cd scripts && node generate-es2015 non-gen",
     "build-swc": "compc -load-config=node_modules/@apache-royale/royale-js/royale-asjs/frameworks/js-config.xml -keep-as3-metadata=JSModule -include-sources=lib -compiler.targets=SWF,JS -warnings=false -output=dist/openfl.swc",
-    "build-tools": "cd scripts && haxe tools-npm.hxml",
     "build-test-es5": "cd test/npm/es5 && webpack",
     "build-test-es6": "cd test/npm/es6 && webpack",
     "build-test-haxe": "cd test/npm/haxe && haxe build.hxml && webpack",
