--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
 
-	lime_hashlink:
+	limehashlink:
 		name: "Lime / Hashlink"
 		runs-on: ubuntu-16.04
 
@@ -58,7 +58,7 @@ jobs:
 			color: "#FF6562"
 			message: "https://github.com/openfl/openfl/actions\nLime Hashlink integration unit tests failed."
 
-	lime_linux-32:
+	limelinux32:
 		name: "Lime / Linux (32-bit)"
 		runs-on: ubuntu-16.04
 
@@ -113,7 +113,7 @@ jobs:
 			color: "#FF6562"
 			message: "https://github.com/openfl/openfl/actions\nLime Linux (32-bit) integration tests failed."
 
-	lime_linux-64:
+	limelinux64:
 		name: "Lime / Linux (64-bit)"
 		runs-on: ubuntu-16.04
 
@@ -168,7 +168,7 @@ jobs:
 			color: "#FF6562"
 			message: "https://github.com/openfl/openfl/actions\nLime Linux (64-bit) integration tests failed."
 
-	lime_neko:
+	limeneko:
 		name: "Lime / Neko"
 		runs-on: ubuntu-16.04
 
