--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -4,17 +4,17 @@ on: [push]
 
 jobs:
 
-	limehashlink:
-		name: "Lime / Hashlink"
-		runs-on: ubuntu-16.04
+  haxelib:
+    name: "Lime / Hashlink"
+    runs-on: ubuntu-16.04
 
-		steps:
-		- uses: actions/checkout@v1
-			with:
-			submodules: true
+    steps:
+    - uses: actions/checkout@v1
+      with:
+        submodules: true
 
-		- name: Setup environment
-			run: |
+    - name: Setup environment
+      run: |
         sudo add-apt-repository ppa:haxe/releases -y
         sudo apt-get update
         sudo apt-get install haxe -y
@@ -22,9 +22,9 @@ jobs:
         haxelib setup $GITHUB_WORKSPACE/.haxelib
         haxelib dev openfl $GITHUB_WORKSPACE
 
-		- name: Install dependencies
-			run: |
-        haxelib install lime
+    - name: Install dependencies
+      run: |
+	  	haxelib install lime
         haxelib install mcover > /dev/null
         haxelib install hamcrest > /dev/null
         git clone https://github.com/openfl/munit $GITHUB_WORKSPACE/munit --depth 1
@@ -33,152 +33,42 @@ jobs:
         haxelib install hxp > /dev/null
         haxelib run hxp --install-hxp-alias
 
-		- name: Install "openfl" command alias
-			run: |
-			  haxelib run openfl setup -alias -y
+    - name: Install "openfl" command alias
+      run: |
+        haxelib run openfl setup -alias -y
 
-		- name: Run unit tests
-			run: |
-		  	hxp integration-test hashlink
+    - name: Run unit tests
+      run: |
+        hxp integration-test hashlink
 
-		- name: Notify Discord (success)
-			uses: appleboy/discord-action@master
-			with:
-			webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-			webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-			color: "#00C07F"
-			message: "https://github.com/openfl/openfl/actions\nLime Hashlink integration tests succeeded."
+    - name: Notify Discord (success)
+      uses: appleboy/discord-action@master
+      with:
+        webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
+        webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
+        color: "#00C07F"
+        message: "https://github.com/openfl/openfl/actions\nLime Hashlink integration tests succeeded."
 
-		- name: Notify Discord (failure)
-			uses: appleboy/discord-action@master
-			if: failure()
-			with:
-			webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-			webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-			color: "#FF6562"
-			message: "https://github.com/openfl/openfl/actions\nLime Hashlink integration unit tests failed."
+    - name: Notify Discord (failure)
+      uses: appleboy/discord-action@master
+      if: failure()
+      with:
+        webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
+        webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
+        color: "#FF6562"
+        message: "https://github.com/openfl/openfl/actions\nLime Hashlink integration tests failed."
 
-	limelinux32:
-		name: "Lime / Linux (32-bit)"
-		runs-on: ubuntu-16.04
+  npm:
+    name: "NPM"
+    runs-on: ubuntu-16.04
 
-		steps:
-		- uses: actions/checkout@v1
-			with:
-			submodules: true
+    steps:
+    - uses: actions/checkout@v1
+      with:
+        submodules: true
 
-		- name: Setup environment
-			run: |
-        sudo add-apt-repository ppa:haxe/releases -y
-        sudo apt-get update
-        sudo apt-get install g++-multilib haxe -y
-        mkdir $GITHUB_WORKSPACE/.haxelib
-        haxelib setup $GITHUB_WORKSPACE/.haxelib
-        haxelib dev openfl $GITHUB_WORKSPACE
-
-		- name: Install dependencies
-			run: |
-        haxelib install lime
-        haxelib install hxcpp
-        haxelib install mcover > /dev/null
-        haxelib install hamcrest > /dev/null
-        git clone https://github.com/openfl/munit $GITHUB_WORKSPACE/munit --depth 1
-        haxelib dev munit $GITHUB_WORKSPACE/munit/src
-        cd $GITHUB_WORKSPACE/munit/tool && haxe build.hxml
-        haxelib install hxp > /dev/null
-        haxelib run hxp --install-hxp-alias
-
-		- name: Install "openfl" command alias
-			run: |
-			  haxelib run openfl setup -alias -y
-
-		- name: Run unit tests
-			run: |
-			  hxp integration-test linux -32
-
-		- name: Notify Discord (success)
-			uses: appleboy/discord-action@master
-			with:
-			webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-			webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-			color: "#00C07F"
-			message: "https://github.com/openfl/openfl/actions\nLime Linux (32-bit) integration tests succeeded."
-
-		- name: Notify Discord (failure)
-			uses: appleboy/discord-action@master
-			if: failure()
-			with:
-			webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-			webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-			color: "#FF6562"
-			message: "https://github.com/openfl/openfl/actions\nLime Linux (32-bit) integration tests failed."
-
-	limelinux64:
-		name: "Lime / Linux (64-bit)"
-		runs-on: ubuntu-16.04
-
-		steps:
-		- uses: actions/checkout@v1
-			with:
-			submodules: true
-
-		- name: Setup environment
-			run: |
-        sudo add-apt-repository ppa:haxe/releases -y
-        sudo apt-get update
-        sudo apt-get install g++ haxe -y
-        mkdir $GITHUB_WORKSPACE/.haxelib
-        haxelib setup $GITHUB_WORKSPACE/.haxelib
-        haxelib dev openfl $GITHUB_WORKSPACE
-
-		- name: Install dependencies
-			run: |
-        haxelib install lime
-        haxelib install hxcpp
-        haxelib install mcover > /dev/null
-        haxelib install hamcrest > /dev/null
-        git clone https://github.com/openfl/munit $GITHUB_WORKSPACE/munit --depth 1
-        haxelib dev munit $GITHUB_WORKSPACE/munit/src
-        cd $GITHUB_WORKSPACE/munit/tool && haxe build.hxml
-        haxelib install hxp > /dev/null
-        haxelib run hxp --install-hxp-alias
-
-		- name: Install "openfl" command alias
-			run: |
-			  haxelib run openfl setup -alias -y
-
-		- name: Run unit tests
-			run: |
-		  	hxp integration-test linux -64
-
-		- name: Notify Discord (success)
-			uses: appleboy/discord-action@master
-			with:
-			webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-			webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-			color: "#00C07F"
-			message: "https://github.com/openfl/openfl/actions\nLime Linux (64-bit) integration tests succeeded."
-
-		- name: Notify Discord (failure)
-			uses: appleboy/discord-action@master
-			if: failure()
-			with:
-			webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-			webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-			color: "#FF6562"
-			message: "https://github.com/openfl/openfl/actions\nLime Linux (64-bit) integration tests failed."
-
-	limeneko:
-		name: "Lime / Neko"
-		runs-on: ubuntu-16.04
-
-		steps:
-		- uses: actions/checkout@v1
-			with:
-			submodules: true
-
-		- name: Setup environment
-			run: |
+    - name: Setup environment
+      run: |
         sudo add-apt-repository ppa:haxe/releases -y
         sudo apt-get update
         sudo apt-get install haxe -y
@@ -186,38 +76,36 @@ jobs:
         haxelib setup $GITHUB_WORKSPACE/.haxelib
         haxelib dev openfl $GITHUB_WORKSPACE
 
-		- name: Install dependencies
-			run: |
-        haxelib install lime
-        haxelib install mcover > /dev/null
-        haxelib install hamcrest > /dev/null
-        git clone https://github.com/openfl/munit $GITHUB_WORKSPACE/munit --depth 1
-        haxelib dev munit $GITHUB_WORKSPACE/munit/src
-        cd $GITHUB_WORKSPACE/munit/tool && haxe build.hxml
-        haxelib install hxp > /dev/null
-        haxelib run hxp --install-hxp-alias
+    - name: Install dependencies
+      run: |
+        npm install
+        npm install -D mocha-puppeteer
 
-		- name: Install "openfl" command alias
-			run: |
-			  haxelib run openfl setup -alias -y
+    - name: Build openfl.js
+      run: npm run build -s
 
-		- name: Run unit tests
-			run: |
-			  hxp integration-test neko
+    - name: Build unit tests
+      run: npm run build-test -s
 
-		- name: Notify Discord (success)
-			uses: appleboy/discord-action@master
-			with:
-			webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-			webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-			color: "#00C07F"
-			message: "https://github.com/openfl/openfl/actions\nLime Neko integration tests succeeded."
+    - name: Run unit tests
+      uses: ianwalter/puppeteer@v2.0.0
+      with:
+        args: npx mocha-puppeteer ./test/npm/es5/bundle.js ./test/npm/es6/bundle.js ./test/npm/haxe/bundle.js ./test/npm/typescript/bundle.js --args no-sandbox
 
-		- name: Notify Discord (failure)
-			uses: appleboy/discord-action@master
-			if: failure()
-			with:
-			webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-			webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-			color: "#FF6562"
-			message: "https://github.com/openfl/openfl/actions\nLime Neko integration tests failed."
+    - name: Notify Discord (success)
+      uses: appleboy/discord-action@master
+      with:
+        webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
+        webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
+        color: "#00C07F"
+        message: "https://github.com/openfl/openfl/actions\nNPM unit tests succeeded."
+
+    - name: Notify Discord (failure)
+      uses: appleboy/discord-action@master
+      if: failure()
+      with:
+        webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
+        webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
+        color: "#FF6562"
+        message: "https://github.com/openfl/openfl/actions\nNPM unit tests failed."
+
