--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -24,7 +24,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        haxelib install lime
+        haxelib install lime > /dev/null
+        haxelib install format > /dev/null
         haxelib install mcover > /dev/null
         haxelib install hamcrest > /dev/null
         git clone https://github.com/openfl/munit $GITHUB_WORKSPACE/munit --depth 1
@@ -37,7 +38,7 @@ jobs:
       run: |
         haxelib run openfl setup -alias -y
 
-    - name: Run unit tests
+    - name: Run integration tests
       run: |
         hxp integration-test hashlink
 
@@ -56,7 +57,7 @@ jobs:
         webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
         webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
         color: "#FF6562"
-        message: "https://github.com/openfl/openfl/actions\nLime Hashlink integration unit tests failed."
+        message: "https://github.com/openfl/openfl/actions\nLime Hashlink integration tests failed."
 
   lime-linux-32:
     name: "Lime / Linux (32-bit)"
@@ -78,8 +79,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        haxelib install lime
-        haxelib install hxcpp
+        haxelib install lime > /dev/null
+        haxelib install hxcpp > /dev/null
+        haxelib install format > /dev/null
         haxelib install mcover > /dev/null
         haxelib install hamcrest > /dev/null
         git clone https://github.com/openfl/munit $GITHUB_WORKSPACE/munit --depth 1
@@ -92,7 +94,7 @@ jobs:
       run: |
         haxelib run openfl setup -alias -y
 
-    - name: Run unit tests
+    - name: Run integration tests
       run: |
         hxp integration-test linux -32
 
@@ -133,8 +135,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        haxelib install lime
-        haxelib install hxcpp
+        haxelib install lime > /dev/null
+        haxelib install hxcpp > /dev/null
+        haxelib install format > /dev/null
         haxelib install mcover > /dev/null
         haxelib install hamcrest > /dev/null
         git clone https://github.com/openfl/munit $GITHUB_WORKSPACE/munit --depth 1
@@ -147,7 +150,7 @@ jobs:
       run: |
         haxelib run openfl setup -alias -y
 
-    - name: Run unit tests
+    - name: Run integration tests
       run: |
         hxp integration-test linux -64
 
@@ -188,7 +191,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        haxelib install lime
+        haxelib install lime > /dev/null
+        haxelib install format > /dev/null
         haxelib install mcover > /dev/null
         haxelib install hamcrest > /dev/null
         git clone https://github.com/openfl/munit $GITHUB_WORKSPACE/munit --depth 1
@@ -201,7 +205,7 @@ jobs:
       run: |
         haxelib run openfl setup -alias -y
 
-    - name: Run unit tests
+    - name: Run integration tests
       run: |
         hxp integration-test neko
 
