--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "url": "https://github.com/openfl/openfl.git"
   },
   "scripts": {
-    "build": "npm run build-lib && npm run build-lib-esm && npm run build-dist && npm run build-tools && npm run build-swc && npm run build-docs",
+    "build": "npm run build-lib && npm run build-lib-esm && npm run build-dist && npm run build-tools && npm run build-swc",
     "build-dist": "npm run build-dist:dev && npm run build-dist:prod",
     "build-dist:dev": "webpack --config webpack.dev.js",
     "build-dist:prod": "webpack --config webpack.prod.js",
