--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"sourceMap": true
 	},
 	"include": [
-		"./src/**/*.ts"
+		"./src/openfl/ui/**/*.ts"
 		// "./src/openfl/utils/ByteArray.ts"
 	]
 }
