Tests working for eventdispatcher, errors, externalinterface

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "build-test-haxe": "cd test/npm/haxe && haxe build.hxml && webpack",
     "build-test-typescript": "cd test/npm/typescript && tsc -p tsconfig.json && webpack",
     "dev-link": "npm link lime && npm link hxgenjs && npm link hxnodejs && npm link hxp && npm link format",
+    "prepare": "lerna bootstrap",
     "prepublishOnly": "npm run build",
     "serve": "http-server -c-1 --cors",
     "test": "npm run build-test-es5 && npm run build-test-es6 && npm run build-test-haxe && npm run build-test-typescript && mocha-chrome test/npm/index.html --old-and-busted",
@@ -96,6 +97,7 @@
     "hxnodejs": "haxefoundation/hxnodejs",
     "hxp": "openfl/hxp",
     "jpeg-js": "^0.3.4",
+    "lerna": "^3.22.0",
     "lime": "openfl/lime#develop",
     "mocha": "^5.2.0",
     "mocha-chrome": "^1.1.0",
