--- a/packages/externalinterface/package.json
+++ b/packages/externalinterface/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@openfl/eventdispatcher",
+	"name": "@openfl/externalinterface",
 	"dependencies": {
-
+		"@openfl/application": "0.0.0"
 	},
 	"scripts":{
 		"prepare": "node ../../scripts/haxelib-bootstrap.js",
