--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "prepare": "lerna bootstrap",
     "prepublishOnly": "npm run build",
     "serve": "http-server -c-1 --cors",
-    "test": "lerna run test -- -s",
+    "test": "lerna run test",
     "test-es5": "npm run build-test-es5 && mocha-chrome test/npm/es5/index.html --old-and-busted",
     "test-es6": "npm run build-test-es6 && mocha-chrome test/npm/es6/index.html --old-and-busted",
     "test-haxe": "npm run build-test-haxe && mocha-chrome test/npm/haxe/index.html --old-and-busted",
@@ -112,6 +112,7 @@
   "dependencies": {
     "file-saver": "^1.3.8",
     "howler": "^2.0.15",
+    "mocha-puppeteer": "^0.14.0",
     "pako": "^1.0.6"
   },
   "haxeDependencies": {
