Switch to Karma from Mocha-Chrome

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "prepare": "lerna bootstrap",
     "prepublishOnly": "npm run build",
     "serve": "http-server -c-1 --cors",
-    "test": "lerna run test",
+    "test": "node scripts/run-tests.js",
     "test-es5": "npm run build-test-es5 && mocha-chrome test/npm/es5/index.html --old-and-busted",
     "test-es6": "npm run build-test-es6 && mocha-chrome test/npm/es6/index.html --old-and-busted",
     "test-haxe": "npm run build-test-haxe && mocha-chrome test/npm/haxe/index.html --old-and-busted",
@@ -88,7 +88,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-stage-1": "^6.24.1",
     "brotli-webpack-plugin": "^1.0.0",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "compression-webpack-plugin": "^1.1.12",
     "format": "jgranick/format",
     "globby": "^8.0.1",
@@ -97,10 +97,13 @@
     "hxnodejs": "haxefoundation/hxnodejs",
     "hxp": "openfl/hxp",
     "jpeg-js": "^0.3.4",
+    "karma": "^5.0.9",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^2.0.1",
     "lerna": "^3.22.0",
     "lime": "openfl/lime#develop",
     "mocha": "^5.2.0",
-    "mocha-chrome": "^1.1.0",
     "typedoc": "^0.11.1",
     "typescript": "^2.9.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
@@ -112,7 +115,6 @@
   "dependencies": {
     "file-saver": "^1.3.8",
     "howler": "^2.0.15",
-    "mocha-puppeteer": "^0.14.0",
     "pako": "^1.0.6"
   },
   "haxeDependencies": {
