Refactor to consolidate OpenGL render code into renderer-stage3d package

--- a/packages/renderer-stage3d/package.json
+++ b/packages/renderer-stage3d/package.json
@@ -2,6 +2,10 @@
 	"name": "@openfl/renderer-stage3d",
 	"dependencies": {
 		"@openfl/renderer-core": "0.0.0",
+		"@openfl/bitmapdata": "0.0.0",
+		"@openfl/displayobject": "0.0.0",
+		"@openfl/textfield": "0.0.0",
+		"@openfl/tilemap": "0.0.0",
 		"@openfl/stage3d": "0.0.0"
 	},
 	"scripts":{
