Refactor to consolidate HTML5 canvas render code into renderer-canvas package

--- a/packages/renderer-canvas/package.json
+++ b/packages/renderer-canvas/package.json
@@ -1,7 +1,12 @@
 {
 	"name": "@openfl/renderer-canvas",
 	"dependencies": {
-		"@openfl/renderer-core": "0.0.0"
+		"@openfl/renderer-core": "0.0.0",
+		"@openfl/bitmapdata": "0.0.0",
+		"@openfl/displayobject": "0.0.0",
+		"@openfl/textfield": "0.0.0",
+		"@openfl/tilemap": "0.0.0",
+		"@openfl/utils": "0.0.0"
 	},
 	"scripts":{
 		"test": "node ../../scripts/run-test.js"
